2005-07-05  Charles Levert  <charles_levert@gna.org>

	* doc/grep.texi: Add missing green color in GREP_COLORS description.
	* doc/grep.1: Fix typo and reorganize GREP_COLORS documentation.

2005-07-04  Charles Levert  <charles_levert@gna.org>

	* src/kwset.c: Readability changes.
	  Replace uses of 0 for pointer values by NULL.
	  Generalize use of existing U() macro to whole file.

	* src/kwset.c (kwsprep): Use memset() and memcpy() when appropriate.

	* src/kwset.c (kwsprep): Move three variable declarations to
	  the single {}-block where they are used.

	* src/kwset.c (kwsprep): Optimize search for mind2 value by
	  starting from the end of the target[] array.

2005-06-22  Charles Levert  <charles_levert@gna.org>

	* grep/autogen.sh, grep/src/Makefile.am, grep/tests/backref.sh,
	  grep/tests/bre.sh, grep/tests/empty.sh, grep/tests/ere.sh,
	  grep/tests/file.sh, grep/tests/fmbtest.sh, grep/tests/foad1.sh,
	  grep/tests/khadafy.sh, grep/tests/options.sh,
	  grep/tests/spencer1.sh, grep/tests/spencer2.sh,
	  grep/tests/status.sh, grep/tests/warning.sh: As per autoconf's
	  "Portable Shell Programming" guidelines, replace all instances
	  of "#!/bin/sh" by "#! /bin/sh" (notice the space).

2005-06-21  Charles Levert  <charles_levert@gna.org>

	* src/grep.c (nlscan): Make this function more robust by removing
	  the undocumented assumption that its "lim" argument points
	  right after a line boundary.  This will be used later to fix
	  --byte-offset's broken behavior.  Patch #3769.

	* src/grep.c (main): Add a test to check if -o/--only-matching
	  and context lines are both specified and if so, set both context
	  specifications (before and after) to zero then print an explicit
	  warning to stderr explaining what was done and why (as opposed
	  to drastically aborting the process in error).  Patch #3768.
	  Other code needs this zero setting to work correctly without
	  having to repeatedly test for this conflictual condition.
